--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ cssclass: homepage
 ---
 
 <div class='hero-unit'>
-  <img src='/assets/logo.png'>
+  <img src='{{relative}}assets/logo.png'>
   <h1>code61</h1>
   <p>Open-source Coding Workshops</p>
 </div>
