--- a/c3s1/index.html
+++ b/c3s1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Sinatra 1</title>
+  <title>Intro to Ruby 1</title>
 
   
 
@@ -31,7 +31,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>Sinatra 1 <small>A simple web app</small></h1>
+  <h1>Intro to Ruby 1 <small>The basics</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -47,6 +47,10 @@
 	
 		
 		<li><a href="#3_variables" data-toggle="tab">Names & Variables </a></li>
+		
+	
+		
+		<li><a href="#4_exercise_summary" data-toggle="tab">Exercise summary </a></li>
 		
 	
 		
@@ -191,6 +195,8 @@
 </code></pre></div>
 <p>Oh dear! Turns out that you can’t add a string to an integer. Have another read of the message that irb gave you. Can you figure out what it is saying? When something goes wrong, ruby tries to be as helpful as it can. Learning to interpret the errors that ruby gives is an important part of learning to become a programmer.</p>
 
+<p><small>The ^ operator in the optional challenge is <a href='http://en.wikipedia.org/wiki/Bitwise_operation#XOR'>bitwise exclusive or</a>.</small></p>
+
 	</div>
 
 	
@@ -290,29 +296,31 @@
 
 <span class='n'>b</span>
 
-<span class='n'>b</span><span class='o'>.</span><span class='n'>capitalize</span>
+<span class='n'>c</span> <span class='o'>=</span> <span class='n'>b</span><span class='o'>.</span><span class='n'>capitalize</span>
 
 <span class='n'>b</span>
 
-<span class='n'>b</span> <span class='o'>=</span> <span class='n'>b</span><span class='o'>.</span><span class='n'>capitalize</span>
-
-<span class='n'>c</span> <span class='o'>=</span> <span class='s2'>&quot;hello&quot;</span>
-
-<span class='n'>c</span><span class='o'>.</span><span class='n'>capitalize!</span>
-
 <span class='n'>c</span>
+
+<span class='n'>d</span> <span class='o'>=</span> <span class='s2'>&quot;hello&quot;</span>
+
+<span class='n'>e</span> <span class='o'>=</span> <span class='n'>d</span><span class='o'>.</span><span class='n'>capitalize!</span>
+
+<span class='n'>d</span>
+
+<span class='n'>e</span>
 
 <span class='nb'>name</span> <span class='o'>=</span> <span class='s2'>&quot;Dave&quot;</span>
 
-<span class='n'>d</span> <span class='o'>=</span> <span class='s2'>&quot;Hello </span><span class='si'>#{</span><span class='nb'>name</span><span class='si'>}</span><span class='s2'>! &quot;</span>
+<span class='n'>f</span> <span class='o'>=</span> <span class='s2'>&quot;Hello </span><span class='si'>#{</span><span class='nb'>name</span><span class='si'>}</span><span class='s2'>! &quot;</span>
 
-<span class='n'>d</span>
+<span class='n'>f</span>
 
 <span class='nb'>name</span> <span class='o'>=</span> <span class='s2'>&quot;Sarah&quot;</span>
 
-<span class='n'>d</span>
+<span class='n'>f</span>
 
-<span class='n'>d</span> <span class='o'>*</span> <span class='mi'>5</span>
+<span class='n'>f</span> <span class='o'>*</span> <span class='mi'>5</span>
 </code></pre></div>
 
 
@@ -335,6 +343,100 @@
 </li>
 </ol>
 </div>
+	</div>
+
+	
+	<div class="tab-pane " id="4_exercise_summary">
+	
+
+		<h2>Exercise summary</h2>
+		<div class='highlight'><pre><code class='ruby'><span class='o'>&gt;</span> <span class='n'>x</span> <span class='o'>=</span> <span class='mi'>1</span>
+<span class='o'>=&gt;</span> <span class='mi'>1</span>
+<span class='o'>&gt;</span> <span class='n'>x</span> <span class='o'>=</span> <span class='n'>x</span> <span class='o'>+</span> <span class='mi'>1</span>
+<span class='o'>=&gt;</span> <span class='mi'>2</span>
+</code></pre></div>
+<p>This might seem really obvious, but it’s worth pointing out: <code>=</code> is an assignment operator; it means ‘set name on the left equal to the value on the right’. It isn’t the same equals as you see in maths! In maths <code>x = x + 1</code> doesn’t really make sense -it’s an equation with no (finite) solutions. In ruby <code>x = x + 1</code> makes perfect sense - just set <code>x</code> to be one more than it was before.</p>
+<div class='highlight'><pre><code class='ruby'><span class='n'>b</span> <span class='o'>=</span> <span class='s2'>&quot;hello&quot;</span>
+<span class='n'>c</span> <span class='o'>=</span> <span class='n'>b</span><span class='o'>.</span><span class='n'>capitalize</span>
+
+<span class='n'>b</span> <span class='c1'>#=&gt; &quot;hello&quot;</span>
+<span class='n'>c</span> <span class='c1'>#=&gt; &quot;HELLO&quot;</span>
+
+<span class='n'>d</span> <span class='o'>=</span> <span class='s2'>&quot;hello&quot;</span> 
+<span class='n'>e</span> <span class='o'>=</span> <span class='n'>d</span><span class='o'>.</span><span class='n'>capitalize!</span>
+
+<span class='n'>d</span> <span class='c1'>#=&gt; &quot;HELLO&quot;</span>
+<span class='n'>e</span> <span class='c1'>#=&gt; &quot;HELLO&quot;</span>
+</code></pre></div>
+<p>This example is pretty important. In the first case <code>capitalize</code> gives back “HELLO”, but leaves the original string untouched.</p>
+<svg enable-background='new 0 0 153.667 96.666' height='96.666px' id='Layer_1' xml:space='preserve' version='1.1' viewBox='0 0 153.667 96.666' width='153.667px' x='0px' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns='http://www.w3.org/2000/svg' y='0px'>
+<rect fill='none' height='27' stroke='#939598' stroke-miterlimit='10' stroke-width='3' width='27' x='8.667' y='9' />
+<text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 19.1484 26)'>b</text>
+<text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 92.667 27)'>“hello”</text>
+<g>
+  <g>
+    <line fill='none' stroke='#000000' stroke-miterlimit='10' x1='35.667' x2='73.606' y1='23' y2='23' />
+    <g>
+      <polygon points='80.667,23 70.718,27.065 73.079,23 70.718,18.936      ' />
+    </g>
+  </g>
+</g>
+<rect fill='none' height='27' stroke='#939598' stroke-miterlimit='10' stroke-width='3' width='27' x='6.89' y='56.807' />
+<text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 19.1484 73.8071)'>c</text>
+<text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 90.8896 74.8071)'>“HELLO”</text>
+<g>
+  <g>
+    <line fill='none' stroke='#000000' stroke-miterlimit='10' x1='33.89' x2='71.829' y1='70.807' y2='70.807' />
+    <g>
+      <polygon points='78.89,70.807 68.94,74.873 71.301,70.807 68.94,66.743       ' />
+    </g>
+  </g>
+</g>
+<path d='M136.333,24c0,6.627-5.373,12-12,12H94.667
+  c-6.627,0-12-5.373-12-12v-2.5c0-6.627,5.373-12,12-12h29.667c6.627,0,12,5.373,12,12V24z' fill='none' stroke='#F7941E' stroke-miterlimit='10' stroke-width='3' />
+<path d='M143.667,72c0,6.627-5.373,12-12,12h-39
+  c-6.627,0-12-5.373-12-12v-3c0-6.627,5.373-12,12-12h39c6.627,0,12,5.373,12,12V72z' fill='none' stroke='#F7941E' stroke-miterlimit='10' stroke-width='3' />
+</svg>
+<p>In the second case, we use the in-place version of <code>captialize!</code>. It changes the actual string that <code>d</code> is pointing to, and sets <code>e</code> to point there too. In ruby, methods often come in two flavours like this, with the <code>!</code> version modifying the original object in place. You could also try out <code>reverse/reverse!</code> and <code>upcase/upcase!</code>.</p>
+<svg enable-background='new 0 0 153.667 96.666' height='96.666px' id='Layer_1' xml:space='preserve' version='1.1' viewBox='0 0 153.667 96.666' width='153.667px' x='0px' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns='http://www.w3.org/2000/svg' y='0px'>
+<g>
+  <g>
+    <line fill='none' stroke='#000000' stroke-miterlimit='10' x1='35.667' x2='72.718' y1='23' y2='23' />
+    <g>
+      <polygon points='79.778,23 69.829,27.065 72.19,23 69.829,18.936       ' />
+    </g>
+  </g>
+</g>
+<g>
+  <g>
+    <line fill='none' stroke='#000000' stroke-miterlimit='10' x1='33.89' x2='76.081' y1='70.807' y2='36.457' />
+    <g>
+      <polygon points='81.556,31.999 76.407,41.433 75.671,36.79 71.274,35.129       ' />
+    </g>
+  </g>
+</g>
+<rect fill='none' height='27' stroke='#939598' stroke-miterlimit='10' stroke-width='3' width='27' x='8.667' y='9' />
+<text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 19.1484 26)'>d</text>
+<rect fill='none' height='27' stroke='#939598' stroke-miterlimit='10' stroke-width='3' width='27' x='6.89' y='56.807' />
+<text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 19.1484 73.8071)'>e</text>
+<text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 91.7783 26.8066)'>“HELLO”</text>
+<path d='M144.556,24c0,6.627-5.373,12-12,12h-39
+  c-6.627,0-12-5.373-12-12v-3c0-6.627,5.373-12,12-12h39c6.627,0,12,5.373,12,12V24z' fill='none' stroke='#F7941E' stroke-miterlimit='10' stroke-width='3' />
+</svg><div class='highlight'><pre><code class='ruby'><span class='o'>&gt;</span> <span class='nb'>name</span> <span class='o'>=</span> <span class='s2'>&quot;Dave&quot;</span>
+<span class='o'>=&gt;</span> <span class='s2'>&quot;Dave&quot;</span>
+<span class='o'>&gt;</span> <span class='n'>f</span> <span class='o'>=</span> <span class='s2'>&quot;Hello </span><span class='si'>#{</span><span class='nb'>name</span><span class='si'>}</span><span class='s2'>! &quot;</span>
+<span class='o'>=&gt;</span> <span class='s2'>&quot;Hello Dave! &quot;</span>
+<span class='o'>&gt;</span> <span class='n'>f</span>
+<span class='o'>=&gt;</span> <span class='s2'>&quot;Hello Dave! &quot;</span>
+<span class='o'>&gt;</span> <span class='nb'>name</span> <span class='o'>=</span> <span class='s2'>&quot;Sarah&quot;</span>
+<span class='o'>=&gt;</span> <span class='s2'>&quot;Sarah&quot;</span>
+<span class='o'>&gt;</span> <span class='n'>f</span>
+<span class='o'>=&gt;</span> <span class='s2'>&quot;Hello Dave! &quot;</span>
+</code></pre></div>
+<p>The above shows that <em>string interpolation happens when you write it down</em>. When you first write <code>f = &quot;Hello #{name}! &quot;</code> ruby immediately looks up <code>name</code> and bakes it straight into the string. Setting <code>name</code> to something differeny later on, won’t change this.</p>
+
+<p><small>In the extra challenge, the expression gave an iterative approximation to sqrt(2). You can tell by rearranging and solving the equation, that any fixed point must be a sqrt of 2. In the final part, by giving it <code>x=1</code> you forced ruby to do integer arithmetic. If you’re into that sort of thing, you might like to try and find the fixed points in this case!</small></p>
+
 	</div>
 
 	
