Updating to 664b881765669c91ad3553ef87171eccb36958ae.

--- a/course3.html
+++ b/course3.html
@@ -92,10 +92,12 @@
 </ul>
 </li>
 
-<li><a href="c3s4">Session 4</a> + Hashes variable value expression</li>
+<li><a href="c3s4">Session 4</a>
+<ul>
+<li>Hashes</li>
 </ul>
-
-<p>values are objects. That means we can ask them questions and give them instructions. assignment</p>
+</li>
+</ul>
 
 <p>name can be a variable, a Constant, (an @instance variable, a @@class variable, $global) http://rubylearning.com/satishtalim/ruby_names.html</p>
 
