Updating to 375038e94e1cf1e732f3b425d83e29bc99d844b7.

--- a/c3s1/index.html
+++ b/c3s1/index.html
@@ -360,13 +360,13 @@
 <span class='n'>c</span> <span class='o'>=</span> <span class='n'>b</span><span class='o'>.</span><span class='n'>capitalize</span>
 
 <span class='n'>b</span> <span class='c1'>#=&gt; &quot;hello&quot;</span>
-<span class='n'>c</span> <span class='c1'>#=&gt; &quot;HELLO&quot;</span>
+<span class='n'>c</span> <span class='c1'>#=&gt; &quot;Hello&quot;</span>
 
 <span class='n'>d</span> <span class='o'>=</span> <span class='s2'>&quot;hello&quot;</span> 
 <span class='n'>e</span> <span class='o'>=</span> <span class='n'>d</span><span class='o'>.</span><span class='n'>capitalize!</span>
 
-<span class='n'>d</span> <span class='c1'>#=&gt; &quot;HELLO&quot;</span>
-<span class='n'>e</span> <span class='c1'>#=&gt; &quot;HELLO&quot;</span>
+<span class='n'>d</span> <span class='c1'>#=&gt; &quot;Hello&quot;</span>
+<span class='n'>e</span> <span class='c1'>#=&gt; &quot;Hello&quot;</span>
 </code></pre></div>
 <p>This example is pretty important. In the first case <code>capitalize</code> gives back “HELLO”, but leaves the original string untouched.</p>
 <svg enable-background='new 0 0 153.667 96.666' height='96.666px' id='Layer_1' xml:space='preserve' version='1.1' viewBox='0 0 153.667 96.666' width='153.667px' x='0px' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns='http://www.w3.org/2000/svg' y='0px'>
@@ -383,7 +383,7 @@
 </g>
 <rect fill='none' height='27' stroke='#939598' stroke-miterlimit='10' stroke-width='3' width='27' x='6.89' y='56.807' />
 <text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 19.1484 73.8071)'>c</text>
-<text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 90.8896 74.8071)'>“HELLO”</text>
+<text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 90.8896 74.8071)'>“Hello”</text>
 <g>
   <g>
     <line fill='none' stroke='#000000' stroke-miterlimit='10' x1='33.89' x2='71.829' y1='70.807' y2='70.807' />
@@ -419,7 +419,7 @@
 <text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 19.1484 26)'>d</text>
 <rect fill='none' height='27' stroke='#939598' stroke-miterlimit='10' stroke-width='3' width='27' x='6.89' y='56.807' />
 <text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 19.1484 73.8071)'>e</text>
-<text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 91.7783 26.8066)'>“HELLO”</text>
+<text font-family='&apos;MyriadPro-Regular&apos;' font-size='12' transform='matrix(1 0 0 1 91.7783 26.8066)'>“Hello”</text>
 <path d='M144.556,24c0,6.627-5.373,12-12,12h-39
   c-6.627,0-12-5.373-12-12v-3c0-6.627,5.373-12,12-12h39c6.627,0,12,5.373,12,12V24z' fill='none' stroke='#F7941E' stroke-miterlimit='10' stroke-width='3' />
 </svg><div class='highlight'><pre><code class='ruby'><span class='o'>&gt;</span> <span class='nb'>name</span> <span class='o'>=</span> <span class='s2'>&quot;Dave&quot;</span>
