Updating to 30d5891cac5ad235af2524627af02194aef02ecb.

--- a/c3s1/index.html
+++ b/c3s1/index.html
@@ -453,13 +453,16 @@
 
 <pre><code>$ gem install sinatra</code></pre>
 
-<p>at the command line.</p>
+<p>at the command line. We will also need a few other rubygems, so install these too:</p>
+
+<pre><code>$ gem install rake rake-test</code></pre>
 <div class='exercise alert alert-info'><strong>Task:</strong>
 <ol>
 <li>
 <p>Install sinatra: at the command line run</p>
 
-<pre><code> $ gem install sinatra</code></pre>
+<pre><code> $ gem install sinatra
+ $ gem install rake rake-test</code></pre>
 </li>
 
 <li>
