Updating to 81df7ac80df43021da6511622a51464398dda7df.

--- a/c3s1/index.html
+++ b/c3s1/index.html
@@ -456,6 +456,12 @@
 <p>at the command line. We will also need a few other rubygems, so install these too:</p>
 
 <pre><code>$ gem install rake rake-test</code></pre>
+
+<p>If you used <code>rbenv</code> to install ruby, you will need to run the following command:</p>
+
+<pre><code>$ rbenv rehash </code></pre>
+
+<p>(If you can’t remember if you’re using <code>rbenv</code>, try the command anyway!)</p>
 <div class='exercise alert alert-info'><strong>Task:</strong>
 <ol>
 <li>
@@ -463,6 +469,12 @@
 
 <pre><code> $ gem install sinatra
  $ gem install rake rake-test</code></pre>
+</li>
+
+<li>
+<p>If you’re using <code>rbenv</code> (or can’t remember whether you are or not) run the following:</p>
+
+<pre><code> $ rbenv rehash</code></pre>
 </li>
 
 <li>
