Updating to ff931f6b127cf9f4495d74e4541bca2d4717ef21.

--- a/course3.html
+++ b/course3.html
@@ -36,9 +36,13 @@
 <ul>
 <li><a href="">Preparation</a>
 <ul>
+<li>Install ruby</li>
+
 <li>Check your ruby installation</li>
 
-<li>Do some ruby tutorial (try ruby?)</li>
+<li>Change sublime text settings</li>
+
+<li>[hwk] Codecademy ruby 1 &amp; 2</li>
 </ul>
 </li>
 
@@ -62,7 +66,7 @@
 
 <li>[ext] Look at tests</li>
 
-<li>[hwk] Codecademy ruby 1 &amp; 2</li>
+<li>[hwk] heroku account, ssh setup</li>
 </ul>
 </li>
 
