--- a/c3s1/index.html
+++ b/c3s1/index.html
@@ -455,26 +455,14 @@
 
 <p>at the command line. We will also need a few other rubygems, so install these too:</p>
 
-<pre><code>$ gem install rake rake-test</code></pre>
-
-<p>If you used <code>rbenv</code> to install ruby, you will need to run the following command:</p>
-
-<pre><code>$ rbenv rehash </code></pre>
-
-<p>(If you can’t remember if you’re using <code>rbenv</code>, try the command anyway!)</p>
+<pre><code>$ gem install rack-test</code></pre>
 <div class='exercise alert alert-info'><strong>Task:</strong>
 <ol>
 <li>
 <p>Install sinatra: at the command line run</p>
 
 <pre><code> $ gem install sinatra
- $ gem install rake rake-test</code></pre>
-</li>
-
-<li>
-<p>If you’re using <code>rbenv</code> (or can’t remember whether you are or not) run the following:</p>
-
-<pre><code> $ rbenv rehash</code></pre>
+ $ gem install rack-test</code></pre>
 </li>
 
 <li>
