Updating to ebbed730971460cc0df29a53ff8531cfb4736568.

--- a/c1s1/index.html
+++ b/c1s1/index.html
@@ -337,7 +337,7 @@
 <p>A few things to look out for</p>
 
 <h3 id="html_file_layout">HTML file layout</h3>
-<div class='highlight'><pre><code class='html'><span class='nt'>&lt;DOCTYPE</span><span class='err'>!</span> <span class='na'>html</span><span class='nt'>&gt;</span>
+<div class='highlight'><pre><code class='html'><span class='cp'>&lt;!DOCTYPE html&gt;</span>
 <span class='nt'>&lt;html&gt;</span>
     <span class='nt'>&lt;head&gt;</span>
         <span class='nt'>&lt;title&gt;</span>Page title<span class='nt'>&lt;/title&gt;</span>
