Updating to 3628f2a756031a771bf334f25797d610249a7e33.

--- a/c1s1/index.html
+++ b/c1s1/index.html
@@ -321,7 +321,7 @@
 		<h2>More HTML</h2>
 		<div class='exercise alert alert-info'><strong>Task:</strong>
 <ol>
-<li>Go to the github repository for this session: <a href=''>https://github.com/code61/learning_html</a></li>
+<li>Go to the github repository for this session: <a href='https://github.com/code61/learning_html'>https://github.com/code61/learning_html</a></li>
 
 <li><em>Clone</em> the repository down into your <code>coding_course</code> folder (by clicking ‘Clone in Desktop’ in the bottom right).</li>
 
