--- a/course3.html
+++ b/course3.html
@@ -34,7 +34,9 @@
 <h2 id="sessions">Sessions</h2>
 
 <ul>
-<li><a href="">Preparation</a>
+<li>
+<p><a href="">Preparation</a></p>
+
 <ul>
 <li>Install ruby</li>
 
@@ -46,7 +48,9 @@
 </ul>
 </li>
 
-<li><a href="c3s1">Session 1</a>
+<li>
+<p><a href="c3s1">Session 1</a></p>
+
 <ul>
 <li>Ruby as an interpreted language, irb, comments</li>
 
@@ -70,35 +74,65 @@
 </ul>
 </li>
 
-<li><a href="c3s2">Session 2</a>
+<li>
+<p><a href="c3s2">Session 2</a></p>
+
 <ul>
 <li>Conditionals in ruby</li>
 
 <li>Truthy and falsey</li>
 
-<li>Sinatra templates</li>
+<li>Sinatra templates, erb</li>
 
 <li>Deploying</li>
 
-<li>[hwk] FOAAS?</li>
+<li>[hwk] FOAAS? - practices templates</li>
 
 <li>[hwk] Codecademy ruby 3 &amp; 4</li>
 </ul>
 </li>
 
-<li><a href="c3s3">Session 3</a>
+<li>
+<p><a href="c3s3">Session 3</a></p>
+
 <ul>
 <li>Arrays, iterating</li>
 
-<li>Building up an in-memory data store (using a constant?)</li>
+<li>Hashes</li>
+</ul>
+<!-- + Building up an in-memory data store (using a constant?) -->
+<ul>
+<li>Reading in from a CSV file</li>
 
 <li>Iterating in a template</li>
 </ul>
 </li>
 
-<li><a href="c3s4">Session 4</a>
+<li>
+<p><a href="c3s4">Session 4</a></p>
+
 <ul>
-<li>Hashes</li>
+<li>functions</li>
+</ul>
+</li>
+
+<li>
+<p><a href="c4s1">Session 1</a></p>
+</li>
+
+<li>
+<p><a href="c4s2">Session 2</a></p>
+</li>
+
+<li>
+<p><a href="c4s3">Session 3</a></p>
+</li>
+
+<li>
+<p><a href="c4s4">Session 4</a></p>
+
+<ul>
+<li>intro to ruby on rails</li>
 </ul>
 </li>
 </ul>
