Updating to e6b55e8722cdcf66fcc3aad99fea728c51c3f11e.

--- a/course3.html
+++ b/course3.html
@@ -78,9 +78,15 @@
 <p><a href="c3s2">Session 2</a></p>
 
 <ul>
-<li>Conditionals in ruby</li>
+<li>Start with basic app using a post request and a conditional</li>
 
-<li>Truthy and falsey</li>
+<li>Show them how to deploy it, diagram explaining remotes?</li>
+
+<li>Improving with templates and erb, redeploy</li>
+
+<li>Boolean ops, Truthy and falsey</li>
+
+<li>Modify their app to use more form information</li>
 
 <li>Sinatra templates, erb</li>
 
@@ -113,6 +119,8 @@
 
 <ul>
 <li>functions</li>
+
+<li>sending emails?</li>
 </ul>
 </li>
 
