Updating to f1b0ec0078f064301a0e05fee305eb70ff9b3cb1.

--- a/c1s2/index.html
+++ b/c1s2/index.html
@@ -73,21 +73,7 @@
 
 <h3 id="setting_up_a_git_repo">Setting up a git repo</h3>
 
-<p>Git works on a folder level. To set up a folder to work with git you need to navigate to that folder in the command line and run.</p>
-
-<pre><code>$ git init</code></pre>
-
-<p>To see what this has done do:</p>
-
-<pre><code>$ ls -a</code></pre>
-
-<p>The <code>-a</code> is a flag which tells the <code>ls</code> command to show hidden files and folders. You should see a folder called <code>.git</code> in the results. If you want you could move into this folder, and have a look around (and then move out again).</p>
-
-<pre><code>$ cd .git
-$ ls
-$ cd ..</code></pre>
-
-<p>All the data to allow git to version control your code will be stored inside this hidden folder. If you ever want to ‘un-version-control’ your code all you have to do is delete this folder.</p>
+<p>Git works on a folder level. To set up a folder to work with git you need to open up the github app and select <code>File &gt; Add Local Repository ...</code>. You then need to select the folder you want to control with git.</p>
 
 <h3 id="excluding_some_files">Excluding some files</h3>
 
