--- a/c3s2/index.html
+++ b/c3s2/index.html
@@ -159,7 +159,7 @@
 
 <li>Run the app from the command line (<code>ruby app.rb</code>), to see if you were right.</li>
 
-<li>(Optional) Add the line <code>raise params.inspect</code> right at the top of the post block. Restart the app and see what happens.</li>
+<li>(Optional) Add the line <code>raise params.inspect</code> right at the top of the post block. Restart the app and see what happens. When you’ve had a look, make sure you remove the line again!</li>
 </ol>
 </div>
 	</div>
