--- a/c1s2/index.html
+++ b/c1s2/index.html
@@ -425,6 +425,58 @@
 <li>(Optional) Read <a href='https://www.inkling.com/read/dreamweaver-cs6-missing-manual-david-sawyer-mcfarland-1st/chapter-4/understanding-links'>this article</a> about absolute vs. relative links.</li>
 </ol>
 </div>
+<h3 id="get_your_domain_name_to_point_to_you_github_page">Get your domain name to point to you github page</h3>
+
+<p>The point of this exercise is to set up your domain name to point towards your new GitHub pages site.</p>
+
+<p>As GitHub hosts many different pages at their IP address, it isn’t quite as simple as pointing your domain address towards that IP address. There are two things you need to do to get your domain name working with your GitHub pages site:</p>
+
+<ol>
+<li>Tell your domain registrar (e.g 123-reg or godaddy) to point your domain name towards GitHub’s IP address.</li>
+
+<li>Tell GitHub that requests to your domain name should come to your site.</li>
+</ol>
+
+<p>Github explains this <a href="https://help.github.com/articles/setting-up-a-custom-domain-with-pages">here</a>.</p>
+
+<h5 id="pointing_your_domain_name_towards_github">Pointing your domain name towards GitHub</h5>
+
+<p>For the first bit you need to log in to your domain registrar and change the DNS settings. You want an <em>A-record</em> pointing to <code>204.232.175.78</code> (which is github.com). Note that it can take up to a couple of days for DNS changes to propagate.</p>
+
+<p>If you’re using 123-reg, your should log in, select your domain from the list, and click “Manage”. You should then go to “Manage DNS”.</p>
+
+<p><img src="/assets/dns_settings.png" alt="123-reg DNS Settings" /></p>
+
+<p>(The @ dns entry stands for the root or bare domain.)</p>
+<div class='exercise alert alert-info'><strong>Task:</strong> 
+
+<p>Log in to your domain registrar and set an A-record to point towards GitHub.</p>
+
+</div>
+<p>Your changes won’t take effect immediately.</p>
+
+<h5 id="tell_github_to_expect_requests_for_your_domain_name">Tell github to expect requests for your domain name</h5>
+<div class='exercise alert alert-info'><strong>Task:</strong>
+<ol>
+<li>
+<p>Open Sublime Text and create a new file.</p>
+</li>
+
+<li>
+<p>Write your domain name on the first line of the new file e.g:</p>
+
+<pre><code>  mydomain.com</code></pre>
+</li>
+
+<li>
+<p>Save that file as <code>CNAME</code> (uppercase, with no extension) in your <code>first_site</code> folder</p>
+</li>
+
+<li>
+<p>Commit your change and then push to github.</p>
+</li>
+</ol>
+</div>
 	</div>
 
 </div>
