Updating to 777419223fea43d66987115da31e436fa949c07c.

--- a/c1s2/index.html
+++ b/c1s2/index.html
@@ -425,7 +425,7 @@
 <li>(Optional) Read <a href='https://www.inkling.com/read/dreamweaver-cs6-missing-manual-david-sawyer-mcfarland-1st/chapter-4/understanding-links'>this article</a> about absolute vs. relative links.</li>
 </ol>
 </div>
-<h3 id="get_your_domain_name_to_point_to_you_github_page">Get your domain name to point to you github page</h3>
+<h3 id="get_your_domain_name_to_point_to_your_github_page">Get your domain name to point to your GitHub Page</h3>
 
 <p>The point of this exercise is to set up your domain name to point towards your new GitHub pages site.</p>
 
