Updating to eab9053d434791d90f74addf70b2a59e67c6896b.

--- a/c1s2/index.html
+++ b/c1s2/index.html
@@ -73,6 +73,8 @@
 
 		<h2>Intro to Git</h2>
 		
+<p><img src="/assets/basic_git.png" alt="Basic git" /></p>
+
 <p>Git is a version control system. It allows you to keep the entire history of your code, and makes it easy to share and collaborate with others.</p>
 
 <h3 id="setting_up_a_git_repo">Setting up a git repo</h3>
